Cambio en el logo

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -11,7 +11,7 @@
 <body id="login-page">
     <div class="login-container">
         <div class="login-content">
-            <img src="../img/fitEssence.png" alt="Logo FitEssence" class="logo">
+            <img src="../img/fitEssence2.png" alt="Logo FitEssence" class="logo">
             <h1>¡Hola de nuevo!</h1>
             <p>¿No tienes una cuenta de FitEssence?<br>
             <a href="#" class="signup-link">Suscríbete de forma gratuita</a></p>
