--- a/src/html/homePage.html
+++ b/src/html/homePage.html
@@ -15,7 +15,7 @@
     <!-- Encabezado -->
     <header class="header">
         <a href="homePage.html" class="logo-link">
-            <img class="logo" src="../img/fitEssence.png" alt="FitEssence Logo">
+            <img class="logo" src="../img/fitEssence2.png" alt="FitEssence Logo">
         </a>
         <nav class="nav" aria-label="Menú principal">
             <ul>
@@ -128,7 +128,7 @@
     <!-- Pie de página -->
     <footer class="footer">
         <div class="footer-logo">
-            <img src="../img/fitEssence.png" alt="FitEssence Logo">
+            <img src="../img/fitEssence2.png" alt="FitEssence Logo">
             <nav aria-label="Redes sociales">
                 <ul>
                     <li><a href="#" class="social-icon instagram" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a></li>
