--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -16,6 +16,14 @@
             href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&display=swap"
             rel="stylesheet">
         <script src="js/script.js" defer></script>
+        <style>
+            html, body {
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                height: 100%;
+            }
+        </style>
     </head>
     <body>
         <!-- Encabezado -->
@@ -206,8 +214,7 @@
                 <h2>Lo que dicen los usuarios de FitEssence sobre la mejor
                     página para ponerte en forma</h2>
                 <div class="reviews-container">
-                    <button class="nav-button left"
-                        aria-label="Anterior testimonio">&#8249;</button>
+                    <button class="nav-button left" aria-label="Anterior testimonio">&#8249;</button>
                     <article class="reviews">
                         <article class="review">
                             <p class="review-title">¡Una app genial!</p>
@@ -255,8 +262,7 @@
                             </section>
                         </article>
                     </article>
-                    <button class="nav-button right"
-                        aria-label="Siguiente testimonio">&#8250;</button>
+                    <button class="nav-button right" aria-label="Siguiente testimonio">&#8250;</button>
                 </div>
             </section>
         </main>
@@ -267,18 +273,10 @@
                 <img src="img/fitEssence2.png" alt="FitEssence Logo">
                 <nav aria-label="Redes sociales">
                     <ul>
-                        <li><a href="#" class="social-icon instagram"
-                                aria-label="Instagram"><i
-                                    class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="#" class="social-icon facebook"
-                                aria-label="Facebook"><i
-                                    class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href="#" class="social-icon linkedin"
-                                aria-label="LinkedIn"><i
-                                    class="fa-brands fa-linkedin"></i></a></li>
-                        <li><a href="#" class="social-icon twitter"
-                                aria-label="Twitter"><i
-                                    class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#" class="social-icon instagram" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#" class="social-icon facebook" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#" class="social-icon linkedin" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a href="#" class="social-icon twitter" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a></li>
                     </ul>
                 </nav>
             </figure>
